--- a/IdentityDemo/Views/Hywm/Otp.cshtml
+++ b/IdentityDemo/Views/Hywm/Otp.cshtml
@@ -194,7 +194,7 @@
         <img src="~/img/hywm_img/otp1.png" alt="Image">
         <div class="form-container">
             <h2>OTP Verification</h2>
-            <p>Enter the 6 digit code we sent to example@gmail.com<br>It's only valid for 90 seconds</p>
+            <p>Enter the 6 digit code we sent to example@gmail.com</p>
             <form id="otp-form">
                 <div class="otp-inputs">
                     <!-- Inputs for OTP digits, each with an oninput handler to move focus -->
