--- a/IdentityDemo/Views/Shop/Shop_view.cshtml
+++ b/IdentityDemo/Views/Shop/Shop_view.cshtml
@@ -94,7 +94,7 @@
 
                 var detailsContent = `
                                 <p>Total Quantity: ${itemQuantity} units</p>
-                                <p>Final Price: ${finalPrice} MMK</p>
+                                <p>Initial Price: ${finalPrice} MMK</p>
                                 <p>Discount: ${discountValue}</p>
                             `;
 
