--- a/IdentityDemo/Views/Shop/UpdateShop.cshtml
+++ b/IdentityDemo/Views/Shop/UpdateShop.cshtml
@@ -23,7 +23,7 @@
                     <form asp-action="UpdateShop" asp-controller="Shop" method="post" enctype="multipart/form-data" runat="server">
                         <input type="hidden" asp-for="ShopId" />
                         <div class="d-flex align-items-center" style="margin-left: 17%;">
-                            <img id="blah" class="img-thumbnail d-block" src="~/img/shop/homeimg2.jpg" alt="Preview Image" />
+                            <img id="blah" class="img-thumbnail d-block" src="~/img/hywm_img/default_shop.png" alt="Preview Image" />
                         </div>
                         <!-- Image Preview Section -->
                         <div class="form-group row mb-3">
