--- a/IdentityDemo/Views/Hywm/Foods.cshtml
+++ b/IdentityDemo/Views/Hywm/Foods.cshtml
@@ -9,9 +9,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteBite</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="~/css/download_css/5_2_3_bootstrap.min.css" rel="stylesheets" />
+    <link href="~/css/download_css/5_2_3_bootstrap.min.css" rel="stylesheet" />
     <script src="~/js/download_js/5_2_3_bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" />
     <link href="~/css/landingpage1.css" rel="stylesheet" />
@@ -330,7 +328,7 @@
                                 <img src="~/img/hywm_img/img/afterlogin/MainLogo.png" alt="Logo" height="70">
                             </div>
                             <div class="col-md-9">
-                                <h5 class="text-uppercase mt-4">NearFoods</h5>
+                                <h5 class="text-uppercase mt-4">Swift Foods</h5>
                             </div>
                         </div>
                     </div>
