--- a/IdentityDemo/Views/Hywm/Landing_page2.cshtml
+++ b/IdentityDemo/Views/Hywm/Landing_page2.cshtml
@@ -125,14 +125,14 @@
     <footer class="footer">
         <div class="footer-column">
             <img src="~/img/hywm_img/items/logo1.png" alt="Near Food Logo">
-            <h3>Near Foods</h3>
+            <h3>Swift Foods</h3>
         </div>
         <div class="footer-column">
             <h3>Follow Us</h3>
             <div class="footer-icons">
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f">a</i></a>
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram">a</i></a>
-                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter">a</i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
         <div class="footer-column">
