Ui and button to go to shop

--- a/IdentityDemo/Views/Hywm/SingleShopView.cshtml
+++ b/IdentityDemo/Views/Hywm/SingleShopView.cshtml
@@ -373,7 +373,7 @@
                 </div>
             </div>
             <div class="submitcandiv">
-                <p>Total Price :<span id="alltotalprice"></span></p>
+                <p class="ms-auto">Total Price :<span id="alltotalprice"></span></p>
                 <div class="d-flex justify-content-center">
                     <button type="submit" id="submittocart" class="btn btn-dark submittocart1" disabled>Purchase</button>
                 </div>
