--- a/IdentityDemo/Views/Hywm/Foods.cshtml
+++ b/IdentityDemo/Views/Hywm/Foods.cshtml
@@ -9,10 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ByteBite</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="~/css/download_css/5_2_3_bootstrap.min.css" rel="stylesheets" />
-    <script src="~/js/download_js/5_2_3_bootstrap.bundle.min.js"></script>
+    <link href="~/css/download_css/bootstrap.min.css" rel="stylesheet">
+    <script src="~/css/download_css/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css" />
     <link href="~/css/landingpage1.css" rel="stylesheet" />
     <style>
@@ -200,6 +198,21 @@
             
         }
 
+        .menu-item1 .gotoshop {
+            position: absolute;
+            bottom: 10px;
+            right: 10px;
+            background: white; /* Ensure no background color */
+            border: none; /* Remove border */
+            font-size: 1.5rem; /* Adjust size as needed */
+            color: black; /* Initial empty heart color */
+            cursor: pointer;
+            outline: none;
+            padding: 0;
+            z-index: 10;
+            transition: color 0.3s; /* Smooth color transition */
+        }
+
         .heart-button.active {
             color: red; /* Filled heart color */
         }
@@ -301,6 +314,8 @@
                             <button class="heart-button @(isInWishlist ? "active" : "")" data-item-id="@item.ItemId">
                                 <i class="fas fa-heart"></i>
                             </button>
+
+                            <button class="gotoshop" onclick="window.location.href='/Hywm/SingleShopView?shopId='+@item.Shop_Id;"><i class="fas fa-arrow-right"></i></button>
                         }
                     </div>
                 </div>
@@ -330,7 +345,7 @@
                                 <img src="~/img/hywm_img/img/afterlogin/MainLogo.png" alt="Logo" height="70">
                             </div>
                             <div class="col-md-9">
-                                <h5 class="text-uppercase mt-4">NearFoods</h5>
+                                <h5 class="text-uppercase mt-4">Swift Foods</h5>
                             </div>
                         </div>
                     </div>
@@ -433,6 +448,7 @@
 
     </script>
     <script src="~/js/download_js/jquery-3.6.0.min.js"></script>
+    
     <script>
         function filterItems(category) {
             console.log('Filtering items by category:', category); // Debugging information
