--- a/IdentityDemo/Views/Home/About.cshtml
+++ b/IdentityDemo/Views/Home/About.cshtml
@@ -77,16 +77,28 @@
             <div class="col-md-6">
                 <h2>Our Mission</h2>
                 <p>
-                    Security and Reliability: Shop with confidence knowing your privacy and data security are our top priorities. We provide a safe and secure online shopping environment.
+                    "Our vision is to become the leading online food ordering pla
+                    tform, known for our commitment to customer satisfaction and 
+                    culinary diversity. We aspire to empower local restaurants by 
+                    expanding their reach and providing customers with a user-friendly 
+                    platform that caters to all their dining preferences. We envision a 
+                    future where ordering food online is synonymous with a delightful and 
+                    hassle-free experience, driven by innovation and a passion for great food."
                 </p>
-                <p>Innovation: Stay updated with the latest trends and technology enhancements that enrich your shopping experience at uab zone.</p>
-                <p>Community Engagement: We actively engage with our community, supporting local businesses and initiatives that promote sustainability and social responsibility.</p>
             </div>
             <div class="col-md-6">
                 <h2>Our Vision</h2>
-                <p>we envision a future where shopping online is not only convenient
-                    but also an enriching experience that connects customers with the products they love. We aim to redefine the online shopping landscape by providing a curated selection of high-quality goods that cater to diverse tastes and needs. Our vision is to be the trusted destination where customers can explore, discover, and purchase with confidence, knowing that every product is sourced with care and delivered with reliability. By fostering a community-driven approach and embracing innovation, we strive to continuously enhance our platform to exceed customer expectations and set new standards in e-commerce excellence.</p>
-            </div>
+                <p>Our mission is to provide a seamless and convenient
+                    online food ordering experience, connecting customers
+                    with their favorite local restaurants. We strive to offer
+                    a diverse range of culinary options, ensuring quality and
+                    satisfaction for every meal delivered. By leveraging technology,
+                    we aim to simplify the process of discovering and ordering
+                    delicious food, making mealtime easier and more enjoyable for
+                    everyone.
+                </p>
+
+                </div>
         </div>
 
         <hr>
