--- a/IdentityDemo/Views/Account/Login_old.cshtml
+++ b/IdentityDemo/Views/Account/Login_old.cshtml
@@ -228,7 +228,7 @@
                         <input asp-for="Password" type="password" id="password" name="Password" required>
                     </div>
                 </div>
-                <div class="row">
+                <div class="row mb-2">
                     <div class="col-8 offset-4">
                         <div class="d-flex align-items-center mt-4">
                             <label class="col-form-label fs-6 me-3">Log in as:</label>
