--- a/IdentityDemo/Views/Shop/UpdateShop.cshtml
+++ b/IdentityDemo/Views/Shop/UpdateShop.cshtml
@@ -88,7 +88,7 @@
 
                         <!-- Action Buttons -->
                         <div class="text-right">
-                            <a href="@Url.Action("Owner_Index", "Shop")" class="btn btn-secondary mr-1" style="width: 130px;">Cancel</a>
+                            <a href="@Url.Action("Owner_dashboard", "Shop")" class="btn btn-secondary mr-1" style="width: 130px;">Cancel</a>
                             <button type="submit" class="btn btn-primary" style="width: 130px;">Save</button>
                         </div>
                     </form>
