--- a/IdentityDemo/Views/Account/Login.cshtml
+++ b/IdentityDemo/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
 <script src="~/js/download_js/5_2_3_bootstrap.bundle.min.js"></script>
 <style>
     body {
-        background-image: url("/img/hywm_img/bg.png");
+        background-image: url("/img/hywm_img/shops/background.jpg");
         background-size: 100% 100%;
         background-repeat: no-repeat;
         background-position: center;
