--- a/IdentityDemo/Views/Hywm/SingleShopView.cshtml
+++ b/IdentityDemo/Views/Hywm/SingleShopView.cshtml
@@ -331,7 +331,7 @@
 
     </div>
     <div class="container mt-4" id="promotion" style="display:none;">
-        @if (promoitem != 0)
+        @if (promoitem == 0)
         {
             <p class="emptytext">No promotion items available at the moment. Please check back later!</p>
         }
