--- a/IdentityDemo/Views/Shared/_User_layout.cshtml
+++ b/IdentityDemo/Views/Shared/_User_layout.cshtml
@@ -12,6 +12,17 @@
     <title>- Near Foods</title>
     <link rel="stylesheet" href="~/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <!-- Bootstrap CSS -->
+    <link href="~/css/download_css/4_5_3_bootstrap.min.css" rel="stylesheet" />
+    <!-- jQuery -->
+    <script src="~/js/download_js/3_5_1_jquery.min.js"></script>
+
+    <!-- Popper.js -->
+    <script src="~/js/download_js/2_5_4_popper.min.js"></script>
+
+    <!-- Bootstrap JS -->
+    <script src="~/js/download_js/4_5_3_bootstrap.min.js"></script>
+
     
 
     <style>
@@ -52,8 +63,8 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-white mb-3 shadow" style="position:sticky;border-radius:0px;margin-top:0px;">
             <div class="container">
-                <img src="~/img/hywm_img/items/logo1.png" style="height:60px;position:sticky"/>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <img src="~/img/hywm_img/items/logo1.png" style="height:60px;position:sticky;color:black!important;"/>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavi" aria-controls="navbarNavi" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
