--- a/IdentityDemo/Views/Hywm/Landing_page2.cshtml
+++ b/IdentityDemo/Views/Hywm/Landing_page2.cshtml
@@ -62,7 +62,7 @@
 
                }
                
-                <a href="#" class="btn howtobtn">
+                <a href="@Url.Action("HowToUse","Hywn")" class="btn howtobtn">
                     <i class="fas fa-play-circle play-button"></i>
                     How to Order
                 </a>
