uab image priority

--- a/IdentityDemo/Views/Order/Order_confirm.cshtml
+++ b/IdentityDemo/Views/Order/Order_confirm.cshtml
@@ -157,7 +157,7 @@
                 <div class="container2">
 
                     <div class="d-flex justify-content-center">
-                        <img id="blah" class="image-preview" src="/img/pay_qr&logo/kbz_pay_qr.jpg" alt="Preview Image" style="max-width: 400px; max-height: 450px; display: block;" />
+                        <img id="blah" class="image-preview" src="/img/pay_qr&logo/uab_pay_QR.png" alt="Preview Image" style="max-width: 400px; max-height: 450px; display: block;" />
                     </div>
                 </div>
             </div>
