--- a/IdentityDemo/Views/Account/Invoice.cshtml
+++ b/IdentityDemo/Views/Account/Invoice.cshtml
@@ -14,8 +14,9 @@
     <!-- Bootstrap and Popper.js Scripts -->    
     <script src="~/js/download_js/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="js/download_js/2_5_4_popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <
+    <script src="~/js/download_js/4_5_3_bootstrap.min.js"></script>
     <!-- Latest html2canvas -->
     <script src="~/js/download_js/1_4_1_html2canvas.min.js"></script>
     <!-- Custom Styles -->
